force-app/main/default/objects/TPM_Incentives__c/TPM_Incentives__c.object-meta.xml
<CustomObject>
    <label>Qualified Dealer</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualified Dealers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>