force-app/main/default/objects/TPM_Incentives__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <label>Dealer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Qualified Dealers</relationshipLabel>
    <relationshipName>Incentives</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>