force-app/main/default/objects/TPM_Incentives__c/fields/Incentive_Cases__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Cases__c</fullName>
    <label>Incentive Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>