force-app/main/default/objects/TPM_Incentives__c/fields/Incentive_Goods__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Goods__c</fullName>
    <label>Incentive Qualified</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Incentive_Qualified</valueSetName>
    </valueSet>
</CustomField>