force-app/main/default/objects/TPM_Incentives__c/fields/Incentive_Value__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Incentive Earned</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>