force-app/main/default/objects/TPM_Incentives__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Scheme__c</columns>
    <columns>Incentive_Value__c</columns>
    <columns>Distributor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>